--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
-    "resend": "^3.10.0",
+    "resend": "latest",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
